objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ASI_HK_CRM_CreatedDateHSTAdj__c</fullName>
        <formula>CreatedDate + 0.333333</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateHSTAdj</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_VSE_Report_Created_Month__c</fullName>
        <formula>CASE(MONTH( ASI_HK_CRM_CreatedDateHSTAdj__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <label>ASI HK CRM - VSE Report - Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_VSE_Report_Created_Year__c</fullName>
        <formula>TEXT(YEAR(  ASI_HK_CRM_CreatedDateHSTAdj__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASI HK CRM - VSE Report - Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CreatedDateKSTAdj__c</fullName>
        <formula>CreatedDate + 0.375</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateKSTAdj</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VSE_Report_Branch_Name__c</fullName>
        <formula>CreatedBy.ASI_KOR_User_Branch_Name__c</formula>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VSE_Report_Created_Month__c</fullName>
        <formula>CASE(MONTH(ASI_KOR_CreatedDateKSTAdj__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <label>VSE Report - Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VSE_Report_Created_Year__c</fullName>
        <formula>TEXT(YEAR( ASI_KOR_CreatedDateKSTAdj__c ))</formula>
        <label>VSE Report - Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VSE_Report_Region_Name__c</fullName>
        <formula>CreatedBy.ASI_KOR_User_Region_Name__c</formula>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Details__c</fullName>
        <description>Account Details
For Baltics: Stores Account name and Street (Address)</description>
        <label>Account Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Route_Sequence__c</fullName>
        <label>Route Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Route_Template_Item__c</fullName>
        <label>Route Template Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Route_Template__c</fullName>
        <description>Route Template ID</description>
        <label>Route Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Week_Number__c</fullName>
        <description>Week number of event at Route Template</description>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_VSE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_AccountInAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Foco</label>
        <referenceTo>LAT_AccountInAction__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Aprovado_pelo_cliente__c</fullName>
        <label>Aprovado pelo cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_OriginalDueDate__c</fullName>
        <description>Field to store the original Due Date in task in case of re-schedule of a task</description>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_PromotionalAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional Action</label>
        <referenceTo>LAT_PromotionalAction__c</referenceTo>
        <relationshipLabel>Atividades</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <formula>IF(ISPICKVAL(Status, &apos;concluído&apos;), &apos;Concluído&apos;,IF(TODAY() &gt; ActivityDate   ,&apos;Em atraso&apos;, &apos;Aberta&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Tipo__c</fullName>
        <label>Tipo Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iniciada</fullName>
                </value>
                <value>
                    <fullName>Coletar</fullName>
                </value>
                <value>
                    <fullName>Materiais</fullName>
                </value>
                <value>
                    <fullName>Pagamento</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
                <value>
                    <fullName>Informar WF/DA</fullName>
                </value>
                <value>
                    <fullName>Formalizar a negociação</fullName>
                </value>
                <value>
                    <fullName>Comunicação Executivo</fullName>
                </value>
                <value>
                    <fullName>POP-Coletar Evidencia</fullName>
                </value>
                <value>
                    <fullName>POP-Distribuicao KAM</fullName>
                </value>
                <value>
                    <fullName>POP-Distribuicao Regional</fullName>
                </value>
                <value>
                    <fullName>POP-Inventario</fullName>
                </value>
                <value>
                    <fullName>POP-Entregar Material</fullName>
                </value>
                <value>
                    <fullName>AP-Coletar Evidencia</fullName>
                </value>
                <value>
                    <fullName>AP-Coletar dados no cliente</fullName>
                </value>
                <value>
                    <fullName>AP-Realizar Pagamento</fullName>
                </value>
                <value>
                    <fullName>AP-Apresentar Proposta ao Cliente</fullName>
                </value>
                <value>
                    <fullName>AP-Formalizar Cancelamento</fullName>
                </value>
                <value>
                    <fullName>AP-Validar Clientes Foco</fullName>
                </value>
                <value>
                    <fullName>Seguimiento de pendientes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Visita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>Atividades Abertas</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_ProjectChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is changed everytime it is saved from the Project visualforce page in order to bypass the validation rule MMP_TOPG_VR01_Raid</description>
        <label>MMPJ_TOPG_ProjectChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_ProjectRaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the task was created from a project raid.</description>
        <label>MMPJ_TOPG_ProjectRaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_RelatedBMC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMPJ TOPGUN</description>
        <label>Related BMC</label>
        <referenceTo>MMPJ_TOPG_BMC__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_RelatedMeeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMPJ TOPGUN</description>
        <label>Meeting</label>
        <referenceTo>MMPJ_TOPG_Meeting__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Cellar_Master_Response__c</fullName>
        <label>Cellar Master Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PJ_ByFor_Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Event_deleted_by_Cellar_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event deleted by Cellar Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Experience_Owner_Email__c</fullName>
        <label>Experience Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Experience_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experience Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Place_of_the_experience__c</fullName>
        <label>Place of the experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Epernay</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_WishedExperienceDate__c</fullName>
        <description>Date associate to a activity agenda.</description>
        <label>PJ_ByFor_WishedExperienceDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PR_Achievement_Detail__c</fullName>
        <label>Achievement Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PR_Achievement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achievement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Activity_Status__c</fullName>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PR_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Visit</fullName>
                </value>
                <value>
                    <fullName>Non-standard Visit</fullName>
                </value>
                <value>
                    <fullName>Non-sales</fullName>
                </value>
                <value>
                    <fullName>Active Day in Trade</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Internal Team Meeting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>Brand Owner</fullName>
                </value>
                <value>
                    <fullName>Offsite Calls</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Cash Collection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sickness</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Admin Day</fullName>
                </value>
                <value>
                    <fullName>Regular Visit</fullName>
                </value>
                <value>
                    <fullName>Urgent Visit</fullName>
                </value>
                <value>
                    <fullName>Emergency Visit</fullName>
                </value>
                <value>
                    <fullName>Planned Visit</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>Holidays2</fullName>
                    <isActive>false</isActive>
                    <label>Holidays2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PR_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PR_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PR_Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PR_Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PR_Objective_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Objective Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Planned_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Report_IsAchieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Is Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Report_IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Report_IsOutstanding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Is Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Report_IsPlanned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Is Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Report_Visit_Type__c</fullName>
        <label>Report Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad hoc</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PR_Visit_Objective__c</fullName>
        <label>Visit Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TECH_TruncatedDescription__c</fullName>
        <description>ESN - Truncated description used in the timeline bubbles. This field is not supposed to be displayed in page layouts.</description>
        <label>Truncated Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Account_Name_Text__c</fullName>
        <formula>TRIM(Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USA Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Check_In_Time__c</fullName>
        <label>USA Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>USA_Created_By_ID__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Owner_UI_Text__c</fullName>
        <description>Used to display and adjust the text in activity list views of briefcase</description>
        <formula>TRIM(Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName)</formula>
        <label>USA Owner UI Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Survey_ID__c</fullName>
        <label>Survey ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_To_Do_Category__c</fullName>
        <label>To Do Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call_Id__c</fullName>
        <label>Unused Field</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call_Send_Email_Date__c</fullName>
        <formula>IF (
    ISBLANK(gvp__Related_Account_Call__c),
    null,
    gvp__Related_Account_Call__r.gvp__Email_Summary_Sent_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Call Send Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call_Send_Email__c</fullName>
        <formula>IF (
    ISBLANK(gvp__Related_Account_Call__c),
    false,
    gvp__Related_Account_Call__r.gvp__Summary_Email__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Call Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call_Status__c</fullName>
        <formula>IF (
    ISBLANK(gvp__Related_Account_Call__c),
     $Label.gvp__no_related_account_call,
    IF (
        ISBLANK(TEXT(gvp__Related_Account_Call__r.gvp__Status__c)),
        $Label.gvp__no_account_call_status,
        TEXT(gvp__Related_Account_Call__r.gvp__Status__c)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Box_URL__c</fullName>
        <label>Box URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gvp__Event_is_Past__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event is Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Is_MegaCall_Open_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MegaCall uses this field to tell the difference between a &quot;Follow Up&quot; task and an &quot;Open Task&quot;.  This helps format the MegaCall Email Summary correctly.</inlineHelpText>
        <label>Is MegaCall Open Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Related_Account_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account Call</label>
        <referenceTo>gvp__Account_Call__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <description>The number of hours the owner has been allocated to work on the Project Task</description>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AR_OPP_ItemsInBackOrder_AR</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>OPP_ItemsInBackOrder_AR</value>
        </filters>
        <label>AR - OPP_ItemsInBackOrder_AR</label>
        <language>es_MX</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_OPP_OrderWithRetencionCodeInJDE_AR</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>AR - OPP_OrderWithRetencionCodeInJDE_AR</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>AR - OPP_OrderWithRetencionCodeInJDE_AR</label>
        <language>es_MX</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_KR_Account_Visitation_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>KR Account Visitation Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_Events</fullName>
        <columns>TASK.RECORDTYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event.EUR_FI_Visitation_Event</value>
        </filters>
        <label>FI Events</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Tasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Cliente inadimplente</value>
        </filters>
        <label>IT Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsUpcomingActivities</fullName>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Team&apos;s Upcoming Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>ZA_Events</fullName>
        <columns>TASK.RECORDTYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event.EUR_ZA_Visitation_Event</value>
        </filters>
        <label>ZA Events</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>